--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,1 +1,2 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
